--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width">
     <title>Days Workflow</title>
     <link href="/style.css" rel="stylesheet" type="text/css">
+    <meta property="og:title" content="Day Counter - Workflow">
+    <meta property="og:description" content="Track days at Workflow">
+    <meta property="og:image" id="og-image">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
   </head>
 
   <body style="pointer-events: auto;">
