--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Days Workflow</title>
+    <title>Day | Workflow</title>
     <link href="/style.css" rel="stylesheet" type="text/css">
-    <meta property="og:title" content="Days at Workflow">
-    <meta property="og:description" content="Days at Workflow">
     <meta property="og:image" content="https://workflow-days.vercel.app/api/og-image?days=123">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
